Dodanie Meta Taga MyLead i nowych zdjęć

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             </ul>
             <p>Sprawdziliśmy ceny w kilku sklepach i Zooplus regularnie oferuje tę karmę w najlepszych cenach, szczególnie w opłacalnych dwupakach.</p>
             
-            <a href="[WKLEJ_TUTAJ_LINK_AFILIACYJNY_ZOOPLUS]" target="_blank" rel="nofollow noopener" class="cta-button">
+            <a href="https://lowest-prices.eu/a/qx6qGh7MMkSQ3lq" target="_blank" rel="nofollow noopener" class="cta-button">
                 Sprawdź Aktualną Cenę na Zooplus.pl
             </a>
         </div>
@@ -167,7 +167,7 @@
                 <li><strong>Minus:</strong> Wysoka cena, ale jakość ją w pełni uzasadnia.</li>
             </ul>
             
-            <a href="[WKLEJ_TUTAJ_LINK_AFILIACYJNY_ZOOPLUS]" target="_blank" rel="nofollow noopener" class="cta-button">
+            <a href="https://lowest-prices.eu/a/qx6qGh7MMkSQ3lq" target="_blank" rel="nofollow noopener" class="cta-button">
                 Sprawdź Aktualną Cenę na Zooplus.pl
             </a>
         </div>
@@ -188,7 +188,7 @@
         </ul>
 
         <div style="text-align: center; margin: 30px 0;">
-            <a href="[WKLEJ_TUTAJ_LINK_AFILIACYJNY_ZOOPLUS]" target="_blank" rel="nofollow noopener" class="cta-button" style="background-color: #27ae60; font-size: 1.3em;">
+            <a href="https://lowest-prices.eu/a/qx6qGh7MMkSQ3lq" target="_blank" rel="nofollow noopener" class="cta-button" style="background-color: #27ae60; font-size: 1.3em;">
                 Przejdź do Zooplus.pl i Zobacz Promocje!
             </a>
         </div>
